--- a/part2/package.json
+++ b/part2/package.json
@@ -20,6 +20,7 @@
     "server": "json-server -p3001 --watch ./src/db.json"
 
   },
+    
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -40,5 +41,9 @@
   },
   "devDependencies": {
     "json-server": "^0.17.0"
-  }
+  },
+  
+    "proxy": "http://localhost:3001"
+
+
 }
